--add-opens for JPS-process #SCL-18806